// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserIcon displays active user image correctly 1`] = `
<View
  accessibilityIgnoresInvertColors={true}
  accessibilityRole="image"
  testID="UserIcon.photo"
>
  <Image
    source={
      {
        "uri": "https://loremflickr.com/640/480?lock=4455548378415104",
      }
    }
    style={
      [
        [
          {
            "borderBottomLeftRadius": 9999,
            "borderBottomRightRadius": 9999,
            "borderTopLeftRadius": 9999,
            "borderTopRightRadius": 9999,
          },
          {
            "borderBottomWidth": 3,
            "borderLeftWidth": 3,
            "borderRightWidth": 3,
            "borderTopWidth": 3,
          },
          {
            "borderBottomColor": "#74AC00",
            "borderLeftColor": "#74AC00",
            "borderRightColor": "#74AC00",
            "borderTopColor": "#74AC00",
          },
          {
            "height": 40,
            "width": 40,
          },
        ],
      ]
    }
  />
</View>
`;

exports[`UserIcon displays small user image correctly 1`] = `
<View
  accessibilityIgnoresInvertColors={true}
  accessibilityRole="image"
  testID="UserIcon.photo"
>
  <Image
    source={
      {
        "uri": "https://loremflickr.com/640/480?lock=4455548378415104",
      }
    }
    style={
      [
        [
          {
            "borderBottomLeftRadius": 9999,
            "borderBottomRightRadius": 9999,
            "borderTopLeftRadius": 9999,
            "borderTopRightRadius": 9999,
          },
          {
            "height": 22,
            "width": 22,
          },
        ],
      ]
    }
  />
</View>
`;

exports[`UserIcon displays user image correctly 1`] = `
<View
  accessibilityIgnoresInvertColors={true}
  accessibilityRole="image"
  testID="UserIcon.photo"
>
  <Image
    source={
      {
        "uri": "https://loremflickr.com/640/480?lock=4455548378415104",
      }
    }
    style={
      [
        [
          {
            "borderBottomLeftRadius": 9999,
            "borderBottomRightRadius": 9999,
            "borderTopLeftRadius": 9999,
            "borderTopRightRadius": 9999,
          },
          {
            "height": 40,
            "width": 40,
          },
        ],
      ]
    }
  />
</View>
`;
